@@ -1,3 +1,8 @@
+2006-11-12  Doug Hellmann  <dhellmann@racemi.com>
+
+	* static/css/site.css: Update the formatting of the "login or
+	register" invitation section of the home page.
+
 2006-11-11  Doug Hellmann  <dhellmann@racemi.com>
 
 	* templates/base.html: Need the dojo.string and
